# mdns_experiment

./: .gitignore  CMakeLists.txt  mdns_client.cpp  mdns_server.cpp
python/: client.py  requirements.txt  server.py
